--- a/Energy demand prediction using machine learning.ipynb
+++ b/Energy demand prediction using machine learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,22 +20,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"D:\\SAGES\\project\\Energy_consumption.csv\", parse_dates=['Timestamp'], index_col='Timestamp').iloc[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>SquareFootage</th>\n",
+       "      <th>Occupancy</th>\n",
+       "      <th>HVACUsage</th>\n",
+       "      <th>LightingUsage</th>\n",
+       "      <th>RenewableEnergy</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Holiday</th>\n",
+       "      <th>EnergyConsumption</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 00:00:00</th>\n",
+       "      <td>25.139433</td>\n",
+       "      <td>43.431581</td>\n",
+       "      <td>1565.693999</td>\n",
+       "      <td>5</td>\n",
+       "      <td>On</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>2.774699</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>75.364373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 01:00:00</th>\n",
+       "      <td>27.731651</td>\n",
+       "      <td>54.225919</td>\n",
+       "      <td>1411.064918</td>\n",
+       "      <td>1</td>\n",
+       "      <td>On</td>\n",
+       "      <td>On</td>\n",
+       "      <td>21.831384</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>83.401855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 02:00:00</th>\n",
+       "      <td>28.704277</td>\n",
+       "      <td>58.907658</td>\n",
+       "      <td>1755.715009</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>6.764672</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>78.270888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 03:00:00</th>\n",
+       "      <td>20.080469</td>\n",
+       "      <td>50.371637</td>\n",
+       "      <td>1452.316318</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>On</td>\n",
+       "      <td>8.623447</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>56.519850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 04:00:00</th>\n",
+       "      <td>23.097359</td>\n",
+       "      <td>51.401421</td>\n",
+       "      <td>1094.130359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>On</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>3.071969</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>70.811732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 05:00:00</th>\n",
+       "      <td>29.576037</td>\n",
+       "      <td>36.824263</td>\n",
+       "      <td>1871.709180</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>17.626690</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>84.321885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 06:00:00</th>\n",
+       "      <td>25.131167</td>\n",
+       "      <td>35.709622</td>\n",
+       "      <td>1607.001228</td>\n",
+       "      <td>6</td>\n",
+       "      <td>On</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>24.264702</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>76.165791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 07:00:00</th>\n",
+       "      <td>23.182844</td>\n",
+       "      <td>31.679920</td>\n",
+       "      <td>1633.955330</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>27.517099</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>74.131906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>25.391999</td>\n",
+       "      <td>46.399364</td>\n",
+       "      <td>1240.309224</td>\n",
+       "      <td>6</td>\n",
+       "      <td>On</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>2.307595</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>78.206236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 09:00:00</th>\n",
+       "      <td>22.212549</td>\n",
+       "      <td>32.418464</td>\n",
+       "      <td>1705.420336</td>\n",
+       "      <td>1</td>\n",
+       "      <td>On</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>29.140071</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>No</td>\n",
+       "      <td>77.992214</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method DataFrame.info of                      Temperature   Humidity  SquareFootage  Occupancy  \\\n",
+       "                     Temperature   Humidity  SquareFootage  Occupancy  \\\n",
        "Timestamp                                                               \n",
        "2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
        "2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
@@ -72,21 +242,55 @@
        "2022-01-01 06:00:00     Yes          76.165791  \n",
        "2022-01-01 07:00:00     Yes          74.131906  \n",
        "2022-01-01 08:00:00      No          78.206236  \n",
-       "2022-01-01 09:00:00      No          77.992214  >"
+       "2022-01-01 09:00:00      No          77.992214  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info"
+    "df = pd.read_csv(\"D:\\SAGES\\project\\Energy_consumption.csv\", parse_dates=['Timestamp'], index_col='Timestamp').iloc[:10]\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 10 entries, 2022-01-01 00:00:00 to 2022-01-01 09:00:00\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Temperature        10 non-null     float64\n",
+      " 1   Humidity           10 non-null     float64\n",
+      " 2   SquareFootage      10 non-null     float64\n",
+      " 3   Occupancy          10 non-null     int64  \n",
+      " 4   HVACUsage          10 non-null     object \n",
+      " 5   LightingUsage      10 non-null     object \n",
+      " 6   RenewableEnergy    10 non-null     float64\n",
+      " 7   DayOfWeek          10 non-null     object \n",
+      " 8   Holiday            10 non-null     object \n",
+      " 9   EnergyConsumption  10 non-null     float64\n",
+      "dtypes: float64(5), int64(1), object(4)\n",
+      "memory usage: 880.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +435,7 @@
        "2022-01-01 04:00:00      No          70.811732  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +464,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3796\u001b[0m     ):\n\u001b[0;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'"
